--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="reset.css" type="text/css">
+    <title>About Me</title>
 </head>
 <body>
-    
+    <Header>About Me</Header>
 </body>
 </html>
