nav bar for contact page

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,13 @@
     <title>Contact</title>
 </head>
 <body>
-    
+        <nav class="navbar navbar-dark bg-dark">
+               <span class="navbar-text"><h1>Kristy Keller</h2></span>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> 
+          </button>
+        </nav>
+    </nav>
+    <h1 class="display-2">Contact</h1>
 </body>
 </html>
