Bootswatch style added and comments for tutor

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <title>Contact</title>
+    <!-- Ask tutor about adding background imagery via  Subtlepatterns...not working-->
+    <!-- Ask tutor if java link is needed at this point -->
+       <style>
+        body {
+  background-image: url("blu_stripes.png");
+    }   
+</style>
 </head>
-
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-text">
@@ -21,6 +23,8 @@
         </button>
     </nav>
     </nav>
+<!-- Ask tutor about how to add a box around contact info via Bootstrap-->
+<!-- Ask tutor how to fix sizing of textarea box--> 
     <form class="needs-validation" novalidate>
         <section class="container">
             <h1 class="display-2">Contact</h1>
