--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,13 @@
 <head>
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <title>Contact</title>
-    <!-- Ask tutor if java link is needed at this point -->
-    <style>
-        body {
-            background-image: url("./assets/Images/blu_stripes.png");
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-text">
-            <h1>Kristy Keller</h1>
+            <h1 id="name">Kristy Keller</h1>
         </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
             aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +21,10 @@
     <!-- Ask tutor about how to add a box around contact info via Bootstrap-->
     <!-- Ask tutor how to fix sizing of textarea box-->
     <form class="needs-validation" novalidate>
-        <section class="container">
+        <section class="container border border-danger">
             <h1 class="display-2">Contact</h1>
             <section class="form-row">
-                <section class="col-md-6 mb-3">
+                <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
@@ -45,7 +40,7 @@
                 </section>
             </section>
             <section class="form-row">
-                <section class="col-md-6 mb-3">
+                <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
@@ -58,7 +53,7 @@
                     </section>
                 </section>
             </section>
-            <section class="form-group">
+            <section class="form-group col-sm-12 col-md-6 col-lg-6">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-square-text" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
