--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,6 @@
         </button>
     </nav>
     </nav>
-    <!-- Ask tutor about how to add a box around contact info via Bootstrap-->
-    <!-- Ask tutor how to fix sizing of textarea box-->
     <form class="needs-validation" novalidate>
         <section class="container border border-danger">
             <h1 class="display-2">Contact</h1>
@@ -53,7 +51,8 @@
                     </section>
                 </section>
             </section>
-            <section class="form-group col-sm-12 col-md-6 col-lg-6">
+            <section class="form-row">
+            <section class="form-group col-sm-12 col-md-6 col-lg-6 mb-12">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-square-text" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
@@ -65,6 +64,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" col="2">Message
                     </textarea>
             </section>
+        </section>
     </form>
     <button class="btn btn-primary" type="submit">Submit</button>
     </form>
