--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark mb-md-3">
         <span class="navbar-text">
             <h1 id="name">Kristy Keller</h1>
         </span>
@@ -19,8 +19,8 @@
     </nav>
     </nav>
     <form class="needs-validation" novalidate>
-        <section class="container border border-danger">
-            <h1 class="display-2">Contact</h1>
+        <section class="container border border-light rounded bg-white mb-3">
+            <br><h1 class="display-5 border-bottom">Contact</h1></br>
             <section class="form-row">
                 <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
@@ -38,7 +38,7 @@
                 </section>
             </section>
             <section class="form-row">
-                <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
+                <section class="col-sm-12 col-md-6 col-lg-6 mb-md-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
@@ -66,7 +66,7 @@
             </section>
         </section>
     </form>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary mb-md-3" type="submit">Submit</button>
     </form>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
