background and nav design updated

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark mb-md-3">
+        <span class="navbar-text">
+            <h1 id="name">Kristy Keller</h1>
+        </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+    </nav>
     <section class="container">
         <section class="row">
             <section class="col">
