--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -19,9 +19,9 @@
     </nav>
     </nav>
     <form class="needs-validation" novalidate>
-        <section class="container border border-light rounded bg-white mb-3">
+        <section class="container border border-light rounded bg-white mb-3 w-50 p-3">
             <br><h1 class="display-3 border-bottom">Contact</h1></br>
-            <section class="form-row">
+            <section class="form-row w-10 p-1">
                 <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +37,7 @@
                     </section>
                 </section>
             </section>
-            <section class="form-row">
+            <section class="form-row w-10 p-1">
                 <section class="col-sm-12 col-md-6 col-lg-6 mb-md-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg">
@@ -51,7 +51,7 @@
                     </section>
                 </section>
             </section>
-            <section class="form-row">
+            <section class="form-row w-10 p-1">
             <section class="form-group col-sm-12 col-md-6 col-lg-6 mb-12">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-square-text" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
