--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark mb-md-3">
-        <span class="navbar-text">
-            <h1 id="name">Kristy Keller</h1>
-        </span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-    </nav>
-    </nav>
-    <form class="needs-validation" novalidate>
-        <section class="container border border-light rounded bg-white mb-3 w-50 p-3">
-            <br><h1 class="display-3 border-bottom">Contact</h1></br>
+        <a class="navbar-brand" href="#"><h2 class="display-5">Kristy Keller</h2></a>
+        <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+          </ul>
+        </section>
+      </nav>
+
+    <form class="needs-validation p-3" novalidate>
+        <section class="container border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
+            <br><h1 class="display-4 border-bottom">Contact</h1></br>
             <section class="form-row w-10 p-1">
                 <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
