--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark mb-md-3">
-        <span class="navbar-text">
-            <h1 id="name">Kristy Keller</h1>
-        </span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-    </nav>
-    </nav>
+        <a class="navbar-brand" href="#"><h2 class="display-5">Kristy Keller</h2></a>
+        <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+          </ul>
+        </section>
+      </nav>
+
     <section class="container">
         <section class="row">
             <section class="col">
