bracket error fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </section>
     <section class="col mb-4">
       <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three>
+        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
         <section class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
