card formating adjusted

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,55 +34,37 @@
       </ul>
     </section>
   </nav>
+  <section class="container border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
+    <br>
+    <h1 class="display-4 border-bottom">Portfolio</h1></br>
+    <section class="form-row w-10 p-1">
+        <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
   <section class="row row-cols-1 row-cols-md-3">
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
-        <section class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </section>
       </section>
-    </section>
-    <section class="col mb-4">
+    </section>    <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Two">
-        <section class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a short card.</p>
-        </section>
       </section>
-    </section>
-    <section class="col mb-4">
+    </section>    <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
-        <section class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content.</p>
-        </section>
       </section>
     </section>
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
-        <section class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </section>
       </section>
     </section>
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Five">
-        <section class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </section>
       </section>
+    </section>
+  </section>
+        </section>
     </section>
   </section>
 </body>
