margin sizing adjusted

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,25 +30,27 @@
       </ul>
     </section>
   </nav>
-  <section class="container border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
+  <section class="container border border-light rounded bg-white mb-3 mt-2 w-75 p-3">
     <br>
     <h1 class="display-4 border-bottom">Portfolio</h1></br>
-    <section class="form-row w-10 p-1">
-        <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
+    <section class="form-row w-30 p-3">
+        <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
   <section class="row row-cols-1 row-cols-md-3">
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
       </section>
-    </section>    <section class="col mb-4">
+    </section>
+        <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Two">
       </section>
-    </section>    <section class="col mb-4">
+        </section>
+         <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
       </section>
-    </section>
+         </section>
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
@@ -59,10 +61,10 @@
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Five">
       </section>
     </section>
-  </section>
-        </section>
+      </section>
     </section>
-  </section>
+      </section>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
