--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,10 @@
             </ul>
         </section>
     </nav>
-
+    <br>
     <form class="needs-validation p-3" novalidate>
-        <section class="container border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
-            <br>
-            <h1 class="display-4 border-bottom">Contact</h1></br>
+        <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
+            <h1 class="display-4 border-bottom">Contact</h1>
             <section class="form-row w-10 p-1">
                 <section class="col-sm-12 col-md-6 col-lg-6 mb-3">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
@@ -83,6 +82,7 @@
     <button class="btn btn-primary mb-md-3" type="submit">Submit</button>
     </form>
     </section>
+</br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
