--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
       </ul>
     </section>
   </nav>
-  <section class="container border border-light rounded bg-white mb-3 mt-2 w-75 p-3">
-    <br>
-    <h1 class="display-4 border-bottom">Portfolio</h1></br>
+  <br>
+  <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
+    <h1 class="display-4 border-bottom">Portfolio</h1>
     <section class="form-row w-30 p-3">
         <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-  <section class="row row-cols-1 row-cols-md-3">
+  <section class="row row-cols-1 row-cols-md-2">
     <section class="col mb-4">
       <section class="card h-100">
         <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
@@ -64,7 +64,7 @@
       </section>
     </section>
       </section>
-
+    </br>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
