--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
           </ul>
         </section>
       </nav>
-
+<br>
+<section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
     <section class="container">
-        <section class="row">
-            <section class="col">
-                <h1>About Me</h1>
-            </section>
+        <section class="row w-30 p-3">
+            <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
+                <h1 class="display-4 border-bottom">About Me</h1>
+         </section>
         </section>
     </section>
+</section>
+</br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
