about me image added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <section class="row w-30 p-3">
             <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
                 <h1 class="display-4 border-bottom">About Me</h1>
+                <img src="./assets/Images/bio-photo.jpg" class="rounded float-left" alt="Kristy Keller" style="width:168px;height:210px;">
          </section>
         </section>
     </section>
