--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css"> 
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -37,7 +33,7 @@
         <section class="row w-30 p-3">
             <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
                 <h1 class="display-4 border-bottom">About Me</h1>
-                <img src="./assets/Images/bio-photo.jpg" class="rounded float-left" alt="Kristy Keller" style="width:168px;height:210px;">
+                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left" alt="Kristy Keller" style="width:270px;height:270px;">
          </section>
         </section>
     </section>
