image border added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="row w-30 p-3">
             <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
                 <h1 class="display-4 border-bottom">About Me</h1>
-                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left" alt="Kristy Keller" style="width:270px;height:270px;">
+                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller" style="width:270px;height:270px;">
          </section>
         </section>
     </section>
