image adjusted for mobile

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </section>
       </nav>
 <br>
-<section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
+<section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
     <section class="container">
         <section class="row w-30 p-3">
             <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-                <h1 class="display-4 border-bottom">About Me</h1>
-                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller" style="width:270px;height:270px;">
+                <h1 class="display-4 border-bottom text-justify">About Me</h1>
+                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller" style="width:180px;height:180px;">
          </section>
         </section>
     </section>
