about me paragraphs added

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
     <section class="container">
         <section class="row w-30 p-3">
             <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-                <h1 class="display-4 border-bottom text-justify">About Me</h1>
+                <h1 class="display-4 border-bottom">About Me</h1>
                 <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller" style="width:180px;height:180px;">
+                <h3>Kristy Keller</h3>
+                
+                <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless learning and building dynamic web and mobile applications. I have been in the eCommerce industry for nearly three years and adore the problem solving enviornment the technology field fosters, leading me to pursue a path further involved with back-end and front-end devlopment.</p>
+
+                <p class="text-center">I have a Full Stack Web Development certificate from the University of Pennslyvania. I have a Bachelor's degree in Communication from Keystone College, and dual Master's degrees in Business Administration and Media Communitcation from Point Park University. I have experience as a freelance Content Marketer along with being a eCommerce Content Specialist at Dick's Sporting Goods.</p>
+        
+                <p class="text-center">From design to execution, I utilize creativty and technical skills to provide seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery, Bootstrap, and other libraries and frameworks. Check out my portfolio for a better look at my way of thinking.</p>
          </section>
         </section>
     </section>
