--- a/index.html
+++ b/index.html
@@ -2,58 +2,85 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css"> 
+    <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><h2 class="display-5">Kristy Keller</h2></a>
+        <a class="navbar-brand" href="#">
+            <h2 class="display-5">Kristy Keller</h2>
+        </a>
         <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-          </ul>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+            </ul>
         </section>
-      </nav>
-<br>
-<section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
-    <section class="container">
-        <section class="row w-30 p-3">
-            <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-                <h1 class="display-4 border-bottom">About Me</h1>
-                <img src="./assets/Images/bio-photo.jpg" class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller" style="width:180px;height:180px;">
-                <h3>Kristy Keller</h3>
-                
-                <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless learning and building dynamic web and mobile applications. I have been in the eCommerce industry for nearly three years and adore the problem solving enviornment the technology field fosters, leading me to pursue a path further involved with back-end and front-end devlopment.</p>
+    </nav>
+    <br>
+    <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
+        <section class="container">
+            <section class="row w-30 p-3">
+                <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
+                    <h1 class="display-4 border-bottom">About Me</h1>
+                    <img src="./assets/Images/bio-photo.jpg"
+                        class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller"
+                        style="width:160px;height:180px;">
+                    <section class="text-dark text-center">
+                        <h4>Kristy Keller</h4>
+                    </section>
 
-                <p class="text-center">I have a Full Stack Web Development certificate from the University of Pennslyvania. I have a Bachelor's degree in Communication from Keystone College, and dual Master's degrees in Business Administration and Media Communitcation from Point Park University. I have experience as a freelance Content Marketer along with being a eCommerce Content Specialist at Dick's Sporting Goods.</p>
-        
-                <p class="text-center">From design to execution, I utilize creativty and technical skills to provide seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery, Bootstrap, and other libraries and frameworks. Check out my portfolio for a better look at my way of thinking.</p>
-         </section>
+                    <p class="text-center text-dark"><i class="fas fa-map-marker-alt"></i>
+                        </svg> Philadelphia, PA</p>
+                    <p class="text-center text-dark"><i class="fab fa-github"></i><a
+                            href="https://github.com/KristyKeller">GitHub</a> <i class="fab fa-linkedin"></i><a
+                            href="https://www.linkedin.com/in/kellerkristy/">Linkedin</a> <i
+                            class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com">Email</a></p>
+
+                    <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless
+                        learning and building dynamic web and mobile applications. I have been in the eCommerce industry
+                        for nearly three years and adore the problem solving enviornment the technology field fosters,
+                        leading me to pursue a path further involved with back-end and front-end devlopment.</p>
+
+                    <p class="text-center">I graduated with dual Master's degrees in Business Administration and Media
+                        Communitcation from Point Park University along with a Bachelor's degree in Communication from
+                        Keystone College. I have a Full Stack Web Development certificate from the University of
+                        Pennslyvania. I have experience as a freelance Content Marketer along with being a eCommerce
+                        Content Specialist at Dick's Sporting Goods.</p>
+
+                    <p class="text-center">From design to execution, I utilize creativty and technical skills to provide
+                        seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery,
+                        Bootstrap, and other libraries and frameworks. Check out my <a
+                            href="portfolio.html">portfolio</a> for a better look at my way of thinking.</p>
+                </section>
+            </section>
         </section>
     </section>
-</section>
-</br>
+    </br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
