--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
         <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </section>
@@ -82,7 +82,7 @@
     <button class="btn btn-primary mb-md-3" type="submit">Submit</button>
     </form>
     </section>
-</br>
+    </br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
