--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </section>
@@ -47,10 +47,10 @@
 
                     <p class="text-center text-dark"><i class="fas fa-map-marker-alt"></i>
                         </svg> Philadelphia, PA</p>
-                    <p class="text-center text-dark"><i class="fab fa-github"></i><a
-                            href="https://github.com/KristyKeller">GitHub</a> <i class="fab fa-linkedin"></i><a
-                            href="https://www.linkedin.com/in/kellerkristy/">Linkedin</a> <i
-                            class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com">Email</a></p>
+                    <p class="text-center text-dark"><i class="fab fa-github"> </i><a
+                            href="https://github.com/KristyKeller"> GitHub</a> <i class="fab fa-linkedin"></i><a
+                            href="https://www.linkedin.com/in/kellerkristy/"> Linkedin</a> <i
+                            class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com"> Email</a></p>
 
                     <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless
                         learning and building dynamic web and mobile applications. I have been in the eCommerce industry
