--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </section>
@@ -34,36 +34,36 @@
   <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
     <h1 class="display-4 border-bottom">Portfolio</h1>
     <section class="form-row w-30 p-3">
-        <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-  <section class="row row-cols-1 row-cols-md-2">
-    <section class="col mb-4">
-      <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
-      </section>
-    </section>
-        <section class="col mb-4">
-      <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Two">
-      </section>
+      <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
+        <section class="row row-cols-1 row-cols-md-2">
+          <section class="col mb-4">
+            <section class="card h-100">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
+            </section>
+          </section>
+          <section class="col mb-4">
+            <section class="card h-100">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Two">
+            </section>
+          </section>
+          <section class="col mb-4">
+            <section class="card h-100">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
+            </section>
+          </section>
+          <section class="col mb-4">
+            <section class="card h-100">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
+            </section>
+          </section>
+          <section class="col mb-4">
+            <section class="card h-100">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Five">
+            </section>
+          </section>
         </section>
-         <section class="col mb-4">
-      <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
-      </section>
-         </section>
-    <section class="col mb-4">
-      <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
       </section>
     </section>
-    <section class="col mb-4">
-      <section class="card h-100">
-        <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Five">
-      </section>
-    </section>
-      </section>
-    </section>
-      </section>
     </br>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -72,4 +72,5 @@
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </html>
