--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="style.css">
