spelling errors corrected

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
                     <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless
                         learning and building dynamic web and mobile applications. I have been in the eCommerce industry
-                        for nearly three years and adore the problem solving enviornment the technology field fosters,
-                        leading me to pursue a path further involved with back-end and front-end devlopment.</p>
+                        for nearly three years and adore the problem solving environment the technology field fosters,
+                        leading me to pursue a path further involved with back-end and front-end development.</p>
 
                     <p class="text-center">I graduated with dual Master's degrees in Business Administration and Media
-                        Communitcation from Point Park University along with a Bachelor's degree in Communication from
+                        Communication from Point Park University along with a Bachelor's degree in Communication from
                         Keystone College. I have a Full Stack Web Development certificate from the University of
-                        Pennslyvania. I have experience as a freelance Content Marketer along with being a eCommerce
+                        Pennsylvania. I have experience as a freelance Content Marketer along with being a eCommerce
                         Content Specialist at Dick's Sporting Goods.</p>
 
-                    <p class="text-center">From design to execution, I utilize creativty and technical skills to provide
+                    <p class="text-center">From design to execution, I utilize creativity and technical skills to provide
                         seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery,
                         Bootstrap, and other libraries and frameworks. Check out my <a
                             href="portfolio.html">portfolio</a> for a better look at my way of thinking.</p>
