--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,26 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <body class="d-flex flex-column">
+            <div id="page-content">
+              <div class="container text-center">
+                <div class="row justify-content-center">
+                  <div class="col-md-7">
+                    <h1 class="font-weight-light mt-4 text-dark"></h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
+              <div class="container text-center">
+                <small>Copyright &copy;</small>
+              </div>
+            </footer>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
