--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,36 @@
       </section>
     </section>
     </br>
+    <body class="d-flex flex-column">
+      <div id="page-content">
+        <div class="container text-center">
+          <div class="row justify-content-center">
+            <div class="col-md-7">
+              <h1 class="font-weight-light mt-4 text-white"></h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
+        <div class="container text-center">
+          <small>Copyright &copy;</small>
+        </div>
+      </footer>
+      <body class="d-flex flex-column">
+        <div id="page-content">
+          <div class="container text-center">
+            <div class="row justify-content-center">
+              <div class="col-md-7">
+                <h1 class="font-weight-light mt-4 text-dark"></h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
+          <div class="container text-center">
+            <small>Copyright &copy;</small>
+          </div>
+        </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
