--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///C:/Users/Kelle/Code/Homework/Responsiveness-Portfolio/KristyKeller.github.io/assets/Images/Kristy%20E.%20Keller%20R%C3%A9sum%C3%A9.pdf">Resume</a>
+                    <a class="nav-link" href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
