new project added

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
       <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
         <section class="row row-cols-1 row-cols-md-2">
           <section class="col mb-4">
-            <section class="card h-100">
-              <a href="https://github.com/KristyKeller/BetterMe">
-                <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project One">
+            <section class="card h-100 justify-content-center">
+            <a href="https://github.com/KristyKeller/TeamProfileGenerator">
+                <img src="./assets/Images/team-gen.png" class="card-img-top" alt="Project One">
             </section>
             </a>
           </section>
@@ -56,8 +56,8 @@
           </section>
           <section class="col mb-4">
             <section class="card h-100">
-              <a href="https://github.com/KristyKeller/password-generator">
-                <img src="./assets/Images/password-generator.png" class="card-img-top" alt="Project Three"> </a>
+              <a href="https://github.com/KristyKeller/BetterMe">
+                <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project Three"> </a>
             </section>
           </section>
           <section class="col mb-4">
