links updated to pull create new browser tab

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,8 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
+          <a class="nav-link" target="_blank"
+            href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -43,20 +44,20 @@
         <section class="row row-cols-1 row-cols-md-2">
           <section class="col mb-4">
             <section class="card h-100 justify-content-center">
-            <a href="https://github.com/KristyKeller/TeamProfileGenerator">
-                <img src="./assets/Images/team-gen.png" class="card-img-top" alt="Project One">
+              <a href="https://github.com/KristyKeller/TeamProfileGenerator" target="_blank">
+                <img src="./assets/Images/team-gen-screenshot.png" class="card-img-top" alt="Project One">
             </section>
             </a>
           </section>
           <section class="col mb-4">
             <section class="card h-100">
-              <a href="https://github.com/KristyKeller/day-planner">
+              <a href="https://github.com/KristyKeller/DayPlanner" target="_blank">
                 <img src="./assets/Images/day-planner.png" class="card-img-top" alt="Project Two"> </a>
             </section>
           </section>
           <section class="col mb-4">
             <section class="card h-100">
-              <a href="https://github.com/KristyKeller/BetterMe">
+              <a href="https://github.com/KristyKeller/BetterMe" target="_blank">
                 <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project Three"> </a>
             </section>
           </section>
