--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
+                    <a class="nav-link" target="_blank"
+                        href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
