--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
+                    <a class="nav-link" target="_blank"
+                        href="https://drive.google.com/file/d/1cRS1RAtpUEq5Rr_RP5cMii1ZpyG69swo/view?usp=sharing">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -52,10 +53,12 @@
 
                     <p class="text-dark"><i class="fas fa-map-marker-alt"></i>
                         </svg> Philadelphia, PA</p>
-                    <p class="text-dark"><i class="fab fa-github"> </i><a href="https://github.com/KristyKeller">
+                    <p class="text-dark"><i class="fab fa-github"> </i><a href="https://github.com/KristyKeller"
+                            target="_blank">
                             GitHub</a><br><i class="fab fa-linkedin"></i><a
-                            href="https://www.linkedin.com/in/kellerkristy/"> Linkedin</a><br><i
-                            class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com"> Email</a></p>
+                            href="https://www.linkedin.com/in/kellerkristy/" target="_blank"> Linkedin</a><br><i
+                            class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com" target="_blank">
+                            Email</a></p>
 
                     <p>Detail-oriented Full-Stack Web Developer with a passion for ceaseless
                         learning and building dynamic web and mobile applications. I have been in the eCommerce industry
